# oby-desktop

./: Cargo.toml
old/: server_http.rs  server_old.rs
src/: database_types.rs  error.rs  login.rs  main.rs  server_http.rs  server_old.rs  table.rs  user.rs
src/shared/: mod.rs
src/ui/: items.rs  mod.rs  offers.rs  orders.rs  settings.rs  vtable.rs
users/: josko.toml
users/josko/: image.qoi  user.toml
