[package]
name = "OBY-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = "4.5.23"
iced = { version = "0.13.1", features = ["advanced", "image", "tokio"] }
iced_aw = "0.11.0"
md5 = "0.7.0"
random_name_generator = "0.3.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.8.19"
