[package]
name = "OBY-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = "4.5.23"
env_logger = "0.11.6"
httparse = "1.9.5"
hyper = "1.5.2"
iced = { version = "0.13.1", features = ["advanced", "image", "qr_code", "svg", "tokio"] }
iced_aw = "0.11.0"
if-addrs = "0.13.3"
log = { version = "0.4.25", features = ["max_level_info"] }
md5 = "0.7.0"
percent-encoding = "2.3.1"
random_name_generator = "0.3.6"
reqwest = {version = "0.12.12", features = ["blocking"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.43.0"
toml = "0.8.19"
urlencoding = "2.1.3"
